Entrega 3/parser.out
Created by PLY version 3.4 (http://www.dabeaz.com/ply)

Unused terminals:

    TkComent

Grammar

Rule 0     S' -> PROGRAMA
Rule 1     PROGRAMA -> TkProgram INSTRUCCION
Rule 2     INSTRUCCION -> ASIGNACION
Rule 3     INSTRUCCION -> CONDICIONAL
Rule 4     INSTRUCCION -> CASE
Rule 5     INSTRUCCION -> REPETICION_DET
Rule 6     INSTRUCCION -> REPETICION_INDET
Rule 7     INSTRUCCION -> BLOQUE
Rule 8     INSTRUCCION -> INPUT
Rule 9     INSTRUCCION -> OUTPUT
Rule 10    ASIGNACION -> VARIABLE TkAsignacion EXPRESION
Rule 11    CONDICIONAL -> TkIf EXPRESION TkThen INSTRUCCION ELSE
Rule 12    ELSE -> TkElse INSTRUCCION
Rule 13    ELSE -> <empty>
Rule 14    CASE -> TkCase EXPRESION TkOf CASECOND TkEnd
Rule 15    CASECOND -> EXPRESION TkFlechaCase INSTRUCCION TkPuntoYComa CASECONDDOS
Rule 16    CASECONDDOS -> EXPRESION TkFlechaCase INSTRUCCION TkPuntoYComa CASECONDDOS
Rule 17    CASECONDDOS -> <empty>
Rule 18    REPETICION_DET -> TkFor VARIABLE TkIn EXPRESION TkDo INSTRUCCION
Rule 19    REPETICION_INDET -> TkWhile EXPRESION TkDo INSTRUCCION
Rule 20    BLOQUE -> TkBegin DECLARE SECUENCIACION END
Rule 21    END -> TkEnd
Rule 22    DECLARE -> TkDeclare LINEADECLARACION
Rule 23    DECLARE -> <empty>
Rule 24    SECUENCIACION -> SECUENCIACION TkPuntoYComa INSTRUCCION
Rule 25    SECUENCIACION -> INSTRUCCION
Rule 26    LINEADECLARACION -> LINEADECLARACION TkPuntoYComa VARIABLES TkAs TYPE
Rule 27    LINEADECLARACION -> VARIABLES TkAs TYPE
Rule 28    TYPE -> TkInt
Rule 29    TYPE -> TkBool
Rule 30    TYPE -> TkRange
Rule 31    VARIABLES -> VARIABLES TkComma VARIABLE
Rule 32    VARIABLES -> VARIABLE
Rule 33    INPUT -> TkRead VARIABLE
Rule 34    OUTPUT -> TkWrite IMPRESION
Rule 35    OUTPUT -> TkWriteLn IMPRESION
Rule 36    IMPRESION -> IMPRESION TkComma STRINEXP
Rule 37    IMPRESION -> STRINEXP
Rule 38    STRINEXP -> TkString
Rule 39    STRINEXP -> EXPRESION
Rule 40    EXPRESION -> EXPRBOOL
Rule 41    EXPRESION -> EXPREARITME
Rule 42    EXPRESION -> VARIABLE
Rule 43    EXPRESION -> EXPRANGO
Rule 44    EXPRESION -> TkParAbre EXPRESION TkParCierra
Rule 45    EXPRESION -> FUNCION
Rule 46    FUNCION -> FUNCIONES TkParAbre EXPRESION TkParCierra
Rule 47    FUNCIONES -> TkBottom
Rule 48    FUNCIONES -> TkRtoi
Rule 49    FUNCIONES -> TkLength
Rule 50    FUNCIONES -> TkTop
Rule 51    EXPRANGO -> EXPRESION TkConstruccion EXPRESION
Rule 52    EXPRANGO -> EXPRESION TkInterseccion EXPRESION
Rule 53    EXPRANGO -> EXPRESION TkPertenece EXPRESION
Rule 54    VARIABLE -> TkId
Rule 55    NUMERO -> TkNum
Rule 56    EXPRELACIONAL -> EXPRESION TkIgual EXPRESION
Rule 57    EXPRELACIONAL -> EXPRESION TkDesIgual EXPRESION
Rule 58    EXPRELACIONAL -> EXPRESION TkMenor EXPRESION
Rule 59    EXPRELACIONAL -> EXPRESION TkMenorIgual EXPRESION
Rule 60    EXPRELACIONAL -> EXPRESION TkMayor EXPRESION
Rule 61    EXPRELACIONAL -> EXPRESION TkMayorIgual EXPRESION
Rule 62    EXPREARITME -> BINEXPRARITM
Rule 63    EXPREARITME -> UNEXPRARITME
Rule 64    EXPREARITME -> NUMERO
Rule 65    BINEXPRARITM -> EXPRESION TkSuma EXPRESION
Rule 66    BINEXPRARITM -> EXPRESION TkResta EXPRESION
Rule 67    BINEXPRARITM -> EXPRESION TkAsterisco EXPRESION
Rule 68    BINEXPRARITM -> EXPRESION TkDiv EXPRESION
Rule 69    BINEXPRARITM -> EXPRESION TkModulo EXPRESION
Rule 70    UNEXPRARITME -> TkResta EXPRESION
Rule 71    UNEXPRARITME -> TkSuma EXPRESION
Rule 72    EXPRBOOL -> EXPRBINBOOL
Rule 73    EXPRBOOL -> BOOL
Rule 74    EXPRBOOL -> EXPRELACIONAL
Rule 75    EXPRBOOL -> UNEXPRBOOL
Rule 76    EXPRBINBOOL -> EXPRESION TkOr EXPRESION
Rule 77    EXPRBINBOOL -> EXPRESION TkAnd EXPRESION
Rule 78    UNEXPRBOOL -> TkNot EXPRESION
Rule 79    BOOL -> TkTrue
Rule 80    BOOL -> TkFalse

Terminals, with rules where they appear

TkAnd                : 77
TkAs                 : 26 27
TkAsignacion         : 10
TkAsterisco          : 67
TkBegin              : 20
TkBool               : 29
TkBottom             : 47
TkCase               : 14
TkComent             : 
TkComma              : 31 36
TkConstruccion       : 51
TkDeclare            : 22
TkDesIgual           : 57
TkDiv                : 68
TkDo                 : 18 19
TkElse               : 12
TkEnd                : 14 21
TkFalse              : 80
TkFlechaCase         : 15 16
TkFor                : 18
TkId                 : 54
TkIf                 : 11
TkIgual              : 56
TkIn                 : 18
TkInt                : 28
TkInterseccion       : 52
TkLength             : 49
TkMayor              : 60
TkMayorIgual         : 61
TkMenor              : 58
TkMenorIgual         : 59
TkModulo             : 69
TkNot                : 78
TkNum                : 55
TkOf                 : 14
TkOr                 : 76
TkParAbre            : 44 46
TkParCierra          : 44 46
TkPertenece          : 53
TkProgram            : 1
TkPuntoYComa         : 15 16 24 26
TkRange              : 30
TkRead               : 33
TkResta              : 66 70
TkRtoi               : 48
TkString             : 38
TkSuma               : 65 71
TkThen               : 11
TkTop                : 50
TkTrue               : 79
TkWhile              : 19
TkWrite              : 34
TkWriteLn            : 35
error                : 

Nonterminals, with rules where they appear

ASIGNACION           : 2
BINEXPRARITM         : 62
BLOQUE               : 7
BOOL                 : 73
CASE                 : 4
CASECOND             : 14
CASECONDDOS          : 15 16
CONDICIONAL          : 3
DECLARE              : 20
ELSE                 : 11
END                  : 20
EXPRANGO             : 43
EXPRBINBOOL          : 72
EXPRBOOL             : 40
EXPREARITME          : 41
EXPRELACIONAL        : 74
EXPRESION            : 10 11 14 15 16 18 19 39 44 46 51 51 52 52 53 53 56 56 57 57 58 58 59 59 60 60 61 61 65 65 66 66 67 67 68 68 69 69 70 71 76 76 77 77 78
FUNCION              : 45
FUNCIONES            : 46
IMPRESION            : 34 35 36
INPUT                : 8
INSTRUCCION          : 1 11 12 15 16 18 19 24 25
LINEADECLARACION     : 22 26
NUMERO               : 64
OUTPUT               : 9
PROGRAMA             : 0
REPETICION_DET       : 5
REPETICION_INDET     : 6
SECUENCIACION        : 20 24
STRINEXP             : 36 37
TYPE                 : 26 27
UNEXPRARITME         : 63
UNEXPRBOOL           : 75
VARIABLE             : 10 18 31 32 33 42
VARIABLES            : 26 27 31

Parsing method: LALR

state 0

    (0) S' -> . PROGRAMA
    (1) PROGRAMA -> . TkProgram INSTRUCCION

    TkProgram       shift and go to state 1

    PROGRAMA                       shift and go to state 2

state 1

    (1) PROGRAMA -> TkProgram . INSTRUCCION
    (2) INSTRUCCION -> . ASIGNACION
    (3) INSTRUCCION -> . CONDICIONAL
    (4) INSTRUCCION -> . CASE
    (5) INSTRUCCION -> . REPETICION_DET
    (6) INSTRUCCION -> . REPETICION_INDET
    (7) INSTRUCCION -> . BLOQUE
    (8) INSTRUCCION -> . INPUT
    (9) INSTRUCCION -> . OUTPUT
    (10) ASIGNACION -> . VARIABLE TkAsignacion EXPRESION
    (11) CONDICIONAL -> . TkIf EXPRESION TkThen INSTRUCCION ELSE
    (14) CASE -> . TkCase EXPRESION TkOf CASECOND TkEnd
    (18) REPETICION_DET -> . TkFor VARIABLE TkIn EXPRESION TkDo INSTRUCCION
    (19) REPETICION_INDET -> . TkWhile EXPRESION TkDo INSTRUCCION
    (20) BLOQUE -> . TkBegin DECLARE SECUENCIACION END
    (33) INPUT -> . TkRead VARIABLE
    (34) OUTPUT -> . TkWrite IMPRESION
    (35) OUTPUT -> . TkWriteLn IMPRESION
    (54) VARIABLE -> . TkId

    TkIf            shift and go to state 4
    TkCase          shift and go to state 6
    TkFor           shift and go to state 12
    TkWhile         shift and go to state 11
    TkBegin         shift and go to state 13
    TkRead          shift and go to state 8
    TkWrite         shift and go to state 20
    TkWriteLn       shift and go to state 14
    TkId            shift and go to state 3

    CASE                           shift and go to state 7
    REPETICION_DET                 shift and go to state 18
    ASIGNACION                     shift and go to state 9
    INSTRUCCION                    shift and go to state 5
    REPETICION_INDET               shift and go to state 10
    OUTPUT                         shift and go to state 21
    VARIABLE                       shift and go to state 15
    INPUT                          shift and go to state 16
    BLOQUE                         shift and go to state 17
    CONDICIONAL                    shift and go to state 19

state 2

    (0) S' -> PROGRAMA .



state 3

    (54) VARIABLE -> TkId .

    TkConstruccion  reduce using rule 54 (VARIABLE -> TkId .)
    TkInterseccion  reduce using rule 54 (VARIABLE -> TkId .)
    TkPertenece     reduce using rule 54 (VARIABLE -> TkId .)
    TkOr            reduce using rule 54 (VARIABLE -> TkId .)
    TkAnd           reduce using rule 54 (VARIABLE -> TkId .)
    TkIgual         reduce using rule 54 (VARIABLE -> TkId .)
    TkDesIgual      reduce using rule 54 (VARIABLE -> TkId .)
    TkMenor         reduce using rule 54 (VARIABLE -> TkId .)
    TkMenorIgual    reduce using rule 54 (VARIABLE -> TkId .)
    TkMayor         reduce using rule 54 (VARIABLE -> TkId .)
    TkMayorIgual    reduce using rule 54 (VARIABLE -> TkId .)
    TkSuma          reduce using rule 54 (VARIABLE -> TkId .)
    TkResta         reduce using rule 54 (VARIABLE -> TkId .)
    TkAsterisco     reduce using rule 54 (VARIABLE -> TkId .)
    TkDiv           reduce using rule 54 (VARIABLE -> TkId .)
    TkModulo        reduce using rule 54 (VARIABLE -> TkId .)
    TkThen          reduce using rule 54 (VARIABLE -> TkId .)
    TkOf            reduce using rule 54 (VARIABLE -> TkId .)
    TkDo            reduce using rule 54 (VARIABLE -> TkId .)
    TkComma         reduce using rule 54 (VARIABLE -> TkId .)
    $end            reduce using rule 54 (VARIABLE -> TkId .)
    TkPuntoYComa    reduce using rule 54 (VARIABLE -> TkId .)
    TkEnd           reduce using rule 54 (VARIABLE -> TkId .)
    TkElse          reduce using rule 54 (VARIABLE -> TkId .)
    TkParCierra     reduce using rule 54 (VARIABLE -> TkId .)
    TkFlechaCase    reduce using rule 54 (VARIABLE -> TkId .)
    TkAs            reduce using rule 54 (VARIABLE -> TkId .)
    TkAsignacion    reduce using rule 54 (VARIABLE -> TkId .)
    TkIn            reduce using rule 54 (VARIABLE -> TkId .)


state 4

    (11) CONDICIONAL -> TkIf . EXPRESION TkThen INSTRUCCION ELSE
    (40) EXPRESION -> . EXPRBOOL
    (41) EXPRESION -> . EXPREARITME
    (42) EXPRESION -> . VARIABLE
    (43) EXPRESION -> . EXPRANGO
    (44) EXPRESION -> . TkParAbre EXPRESION TkParCierra
    (45) EXPRESION -> . FUNCION
    (72) EXPRBOOL -> . EXPRBINBOOL
    (73) EXPRBOOL -> . BOOL
    (74) EXPRBOOL -> . EXPRELACIONAL
    (75) EXPRBOOL -> . UNEXPRBOOL
    (62) EXPREARITME -> . BINEXPRARITM
    (63) EXPREARITME -> . UNEXPRARITME
    (64) EXPREARITME -> . NUMERO
    (54) VARIABLE -> . TkId
    (51) EXPRANGO -> . EXPRESION TkConstruccion EXPRESION
    (52) EXPRANGO -> . EXPRESION TkInterseccion EXPRESION
    (53) EXPRANGO -> . EXPRESION TkPertenece EXPRESION
    (46) FUNCION -> . FUNCIONES TkParAbre EXPRESION TkParCierra
    (76) EXPRBINBOOL -> . EXPRESION TkOr EXPRESION
    (77) EXPRBINBOOL -> . EXPRESION TkAnd EXPRESION
    (79) BOOL -> . TkTrue
    (80) BOOL -> . TkFalse
    (56) EXPRELACIONAL -> . EXPRESION TkIgual EXPRESION
    (57) EXPRELACIONAL -> . EXPRESION TkDesIgual EXPRESION
    (58) EXPRELACIONAL -> . EXPRESION TkMenor EXPRESION
    (59) EXPRELACIONAL -> . EXPRESION TkMenorIgual EXPRESION
    (60) EXPRELACIONAL -> . EXPRESION TkMayor EXPRESION
    (61) EXPRELACIONAL -> . EXPRESION TkMayorIgual EXPRESION
    (78) UNEXPRBOOL -> . TkNot EXPRESION
    (65) BINEXPRARITM -> . EXPRESION TkSuma EXPRESION
    (66) BINEXPRARITM -> . EXPRESION TkResta EXPRESION
    (67) BINEXPRARITM -> . EXPRESION TkAsterisco EXPRESION
    (68) BINEXPRARITM -> . EXPRESION TkDiv EXPRESION
    (69) BINEXPRARITM -> . EXPRESION TkModulo EXPRESION
    (70) UNEXPRARITME -> . TkResta EXPRESION
    (71) UNEXPRARITME -> . TkSuma EXPRESION
    (55) NUMERO -> . TkNum
    (47) FUNCIONES -> . TkBottom
    (48) FUNCIONES -> . TkRtoi
    (49) FUNCIONES -> . TkLength
    (50) FUNCIONES -> . TkTop

    TkParAbre       shift and go to state 26
    TkId            shift and go to state 3
    TkTrue          shift and go to state 23
    TkFalse         shift and go to state 24
    TkNot           shift and go to state 27
    TkResta         shift and go to state 43
    TkSuma          shift and go to state 32
    TkNum           shift and go to state 25
    TkBottom        shift and go to state 41
    TkRtoi          shift and go to state 37
    TkLength        shift and go to state 33
    TkTop           shift and go to state 39

    EXPRESION                      shift and go to state 22
    UNEXPRBOOL                     shift and go to state 40
    EXPRBOOL                       shift and go to state 42
    EXPRELACIONAL                  shift and go to state 34
    UNEXPRARITME                   shift and go to state 29
    FUNCIONES                      shift and go to state 44
    BOOL                           shift and go to state 30
    NUMERO                         shift and go to state 35
    EXPREARITME                    shift and go to state 28
    VARIABLE                       shift and go to state 36
    EXPRBINBOOL                    shift and go to state 46
    BINEXPRARITM                   shift and go to state 31
    EXPRANGO                       shift and go to state 45
    FUNCION                        shift and go to state 38

state 5

    (1) PROGRAMA -> TkProgram INSTRUCCION .

    $end            reduce using rule 1 (PROGRAMA -> TkProgram INSTRUCCION .)


state 6

    (14) CASE -> TkCase . EXPRESION TkOf CASECOND TkEnd
    (40) EXPRESION -> . EXPRBOOL
    (41) EXPRESION -> . EXPREARITME
    (42) EXPRESION -> . VARIABLE
    (43) EXPRESION -> . EXPRANGO
    (44) EXPRESION -> . TkParAbre EXPRESION TkParCierra
    (45) EXPRESION -> . FUNCION
    (72) EXPRBOOL -> . EXPRBINBOOL
    (73) EXPRBOOL -> . BOOL
    (74) EXPRBOOL -> . EXPRELACIONAL
    (75) EXPRBOOL -> . UNEXPRBOOL
    (62) EXPREARITME -> . BINEXPRARITM
    (63) EXPREARITME -> . UNEXPRARITME
    (64) EXPREARITME -> . NUMERO
    (54) VARIABLE -> . TkId
    (51) EXPRANGO -> . EXPRESION TkConstruccion EXPRESION
    (52) EXPRANGO -> . EXPRESION TkInterseccion EXPRESION
    (53) EXPRANGO -> . EXPRESION TkPertenece EXPRESION
    (46) FUNCION -> . FUNCIONES TkParAbre EXPRESION TkParCierra
    (76) EXPRBINBOOL -> . EXPRESION TkOr EXPRESION
    (77) EXPRBINBOOL -> . EXPRESION TkAnd EXPRESION
    (79) BOOL -> . TkTrue
    (80) BOOL -> . TkFalse
    (56) EXPRELACIONAL -> . EXPRESION TkIgual EXPRESION
    (57) EXPRELACIONAL -> . EXPRESION TkDesIgual EXPRESION
    (58) EXPRELACIONAL -> . EXPRESION TkMenor EXPRESION
    (59) EXPRELACIONAL -> . EXPRESION TkMenorIgual EXPRESION
    (60) EXPRELACIONAL -> . EXPRESION TkMayor EXPRESION
    (61) EXPRELACIONAL -> . EXPRESION TkMayorIgual EXPRESION
    (78) UNEXPRBOOL -> . TkNot EXPRESION
    (65) BINEXPRARITM -> . EXPRESION TkSuma EXPRESION
    (66) BINEXPRARITM -> . EXPRESION TkResta EXPRESION
    (67) BINEXPRARITM -> . EXPRESION TkAsterisco EXPRESION
    (68) BINEXPRARITM -> . EXPRESION TkDiv EXPRESION
    (69) BINEXPRARITM -> . EXPRESION TkModulo EXPRESION
    (70) UNEXPRARITME -> . TkResta EXPRESION
    (71) UNEXPRARITME -> . TkSuma EXPRESION
    (55) NUMERO -> . TkNum
    (47) FUNCIONES -> . TkBottom
    (48) FUNCIONES -> . TkRtoi
    (49) FUNCIONES -> . TkLength
    (50) FUNCIONES -> . TkTop

    TkParAbre       shift and go to state 26
    TkId            shift and go to state 3
    TkTrue          shift and go to state 23
    TkFalse         shift and go to state 24
    TkNot           shift and go to state 27
    TkResta         shift and go to state 43
    TkSuma          shift and go to state 32
    TkNum           shift and go to state 25
    TkBottom        shift and go to state 41
    TkRtoi          shift and go to state 37
    TkLength        shift and go to state 33
    TkTop           shift and go to state 39

    EXPRESION                      shift and go to state 47
    UNEXPRBOOL                     shift and go to state 40
    EXPRBOOL                       shift and go to state 42
    EXPRELACIONAL                  shift and go to state 34
    FUNCIONES                      shift and go to state 44
    UNEXPRARITME                   shift and go to state 29
    NUMERO                         shift and go to state 35
    EXPREARITME                    shift and go to state 28
    VARIABLE                       shift and go to state 36
    BOOL                           shift and go to state 30
    EXPRBINBOOL                    shift and go to state 46
    BINEXPRARITM                   shift and go to state 31
    EXPRANGO                       shift and go to state 45
    FUNCION                        shift and go to state 38

state 7

    (4) INSTRUCCION -> CASE .

    TkElse          reduce using rule 4 (INSTRUCCION -> CASE .)
    $end            reduce using rule 4 (INSTRUCCION -> CASE .)
    TkPuntoYComa    reduce using rule 4 (INSTRUCCION -> CASE .)
    TkEnd           reduce using rule 4 (INSTRUCCION -> CASE .)


state 8

    (33) INPUT -> TkRead . VARIABLE
    (54) VARIABLE -> . TkId

    TkId            shift and go to state 3

    VARIABLE                       shift and go to state 48

state 9

    (2) INSTRUCCION -> ASIGNACION .

    TkElse          reduce using rule 2 (INSTRUCCION -> ASIGNACION .)
    $end            reduce using rule 2 (INSTRUCCION -> ASIGNACION .)
    TkPuntoYComa    reduce using rule 2 (INSTRUCCION -> ASIGNACION .)
    TkEnd           reduce using rule 2 (INSTRUCCION -> ASIGNACION .)


state 10

    (6) INSTRUCCION -> REPETICION_INDET .

    TkElse          reduce using rule 6 (INSTRUCCION -> REPETICION_INDET .)
    $end            reduce using rule 6 (INSTRUCCION -> REPETICION_INDET .)
    TkPuntoYComa    reduce using rule 6 (INSTRUCCION -> REPETICION_INDET .)
    TkEnd           reduce using rule 6 (INSTRUCCION -> REPETICION_INDET .)


state 11

    (19) REPETICION_INDET -> TkWhile . EXPRESION TkDo INSTRUCCION
    (40) EXPRESION -> . EXPRBOOL
    (41) EXPRESION -> . EXPREARITME
    (42) EXPRESION -> . VARIABLE
    (43) EXPRESION -> . EXPRANGO
    (44) EXPRESION -> . TkParAbre EXPRESION TkParCierra
    (45) EXPRESION -> . FUNCION
    (72) EXPRBOOL -> . EXPRBINBOOL
    (73) EXPRBOOL -> . BOOL
    (74) EXPRBOOL -> . EXPRELACIONAL
    (75) EXPRBOOL -> . UNEXPRBOOL
    (62) EXPREARITME -> . BINEXPRARITM
    (63) EXPREARITME -> . UNEXPRARITME
    (64) EXPREARITME -> . NUMERO
    (54) VARIABLE -> . TkId
    (51) EXPRANGO -> . EXPRESION TkConstruccion EXPRESION
    (52) EXPRANGO -> . EXPRESION TkInterseccion EXPRESION
    (53) EXPRANGO -> . EXPRESION TkPertenece EXPRESION
    (46) FUNCION -> . FUNCIONES TkParAbre EXPRESION TkParCierra
    (76) EXPRBINBOOL -> . EXPRESION TkOr EXPRESION
    (77) EXPRBINBOOL -> . EXPRESION TkAnd EXPRESION
    (79) BOOL -> . TkTrue
    (80) BOOL -> . TkFalse
    (56) EXPRELACIONAL -> . EXPRESION TkIgual EXPRESION
    (57) EXPRELACIONAL -> . EXPRESION TkDesIgual EXPRESION
    (58) EXPRELACIONAL -> . EXPRESION TkMenor EXPRESION
    (59) EXPRELACIONAL -> . EXPRESION TkMenorIgual EXPRESION
    (60) EXPRELACIONAL -> . EXPRESION TkMayor EXPRESION
    (61) EXPRELACIONAL -> . EXPRESION TkMayorIgual EXPRESION
    (78) UNEXPRBOOL -> . TkNot EXPRESION
    (65) BINEXPRARITM -> . EXPRESION TkSuma EXPRESION
    (66) BINEXPRARITM -> . EXPRESION TkResta EXPRESION
    (67) BINEXPRARITM -> . EXPRESION TkAsterisco EXPRESION
    (68) BINEXPRARITM -> . EXPRESION TkDiv EXPRESION
    (69) BINEXPRARITM -> . EXPRESION TkModulo EXPRESION
    (70) UNEXPRARITME -> . TkResta EXPRESION
    (71) UNEXPRARITME -> . TkSuma EXPRESION
    (55) NUMERO -> . TkNum
    (47) FUNCIONES -> . TkBottom
    (48) FUNCIONES -> . TkRtoi
    (49) FUNCIONES -> . TkLength
    (50) FUNCIONES -> . TkTop

    TkParAbre       shift and go to state 26
    TkId            shift and go to state 3
    TkTrue          shift and go to state 23
    TkFalse         shift and go to state 24
    TkNot           shift and go to state 27
    TkResta         shift and go to state 43
    TkSuma          shift and go to state 32
    TkNum           shift and go to state 25
    TkBottom        shift and go to state 41
    TkRtoi          shift and go to state 37
    TkLength        shift and go to state 33
    TkTop           shift and go to state 39

    EXPRESION                      shift and go to state 49
    UNEXPRBOOL                     shift and go to state 40
    EXPRBOOL                       shift and go to state 42
    EXPRELACIONAL                  shift and go to state 34
    FUNCIONES                      shift and go to state 44
    UNEXPRARITME                   shift and go to state 29
    BOOL                           shift and go to state 30
    NUMERO                         shift and go to state 35
    EXPREARITME                    shift and go to state 28
    VARIABLE                       shift and go to state 36
    EXPRBINBOOL                    shift and go to state 46
    BINEXPRARITM                   shift and go to state 31
    EXPRANGO                       shift and go to state 45
    FUNCION                        shift and go to state 38

state 12

    (18) REPETICION_DET -> TkFor . VARIABLE TkIn EXPRESION TkDo INSTRUCCION
    (54) VARIABLE -> . TkId

    TkId            shift and go to state 3

    VARIABLE                       shift and go to state 50

state 13

    (20) BLOQUE -> TkBegin . DECLARE SECUENCIACION END
    (22) DECLARE -> . TkDeclare LINEADECLARACION
    (23) DECLARE -> .

    TkDeclare       shift and go to state 52
    TkIf            reduce using rule 23 (DECLARE -> .)
    TkCase          reduce using rule 23 (DECLARE -> .)
    TkFor           reduce using rule 23 (DECLARE -> .)
    TkWhile         reduce using rule 23 (DECLARE -> .)
    TkBegin         reduce using rule 23 (DECLARE -> .)
    TkRead          reduce using rule 23 (DECLARE -> .)
    TkWrite         reduce using rule 23 (DECLARE -> .)
    TkWriteLn       reduce using rule 23 (DECLARE -> .)
    TkId            reduce using rule 23 (DECLARE -> .)

    DECLARE                        shift and go to state 51

state 14

    (35) OUTPUT -> TkWriteLn . IMPRESION
    (36) IMPRESION -> . IMPRESION TkComma STRINEXP
    (37) IMPRESION -> . STRINEXP
    (38) STRINEXP -> . TkString
    (39) STRINEXP -> . EXPRESION
    (40) EXPRESION -> . EXPRBOOL
    (41) EXPRESION -> . EXPREARITME
    (42) EXPRESION -> . VARIABLE
    (43) EXPRESION -> . EXPRANGO
    (44) EXPRESION -> . TkParAbre EXPRESION TkParCierra
    (45) EXPRESION -> . FUNCION
    (72) EXPRBOOL -> . EXPRBINBOOL
    (73) EXPRBOOL -> . BOOL
    (74) EXPRBOOL -> . EXPRELACIONAL
    (75) EXPRBOOL -> . UNEXPRBOOL
    (62) EXPREARITME -> . BINEXPRARITM
    (63) EXPREARITME -> . UNEXPRARITME
    (64) EXPREARITME -> . NUMERO
    (54) VARIABLE -> . TkId
    (51) EXPRANGO -> . EXPRESION TkConstruccion EXPRESION
    (52) EXPRANGO -> . EXPRESION TkInterseccion EXPRESION
    (53) EXPRANGO -> . EXPRESION TkPertenece EXPRESION
    (46) FUNCION -> . FUNCIONES TkParAbre EXPRESION TkParCierra
    (76) EXPRBINBOOL -> . EXPRESION TkOr EXPRESION
    (77) EXPRBINBOOL -> . EXPRESION TkAnd EXPRESION
    (79) BOOL -> . TkTrue
    (80) BOOL -> . TkFalse
    (56) EXPRELACIONAL -> . EXPRESION TkIgual EXPRESION
    (57) EXPRELACIONAL -> . EXPRESION TkDesIgual EXPRESION
    (58) EXPRELACIONAL -> . EXPRESION TkMenor EXPRESION
    (59) EXPRELACIONAL -> . EXPRESION TkMenorIgual EXPRESION
    (60) EXPRELACIONAL -> . EXPRESION TkMayor EXPRESION
    (61) EXPRELACIONAL -> . EXPRESION TkMayorIgual EXPRESION
    (78) UNEXPRBOOL -> . TkNot EXPRESION
    (65) BINEXPRARITM -> . EXPRESION TkSuma EXPRESION
    (66) BINEXPRARITM -> . EXPRESION TkResta EXPRESION
    (67) BINEXPRARITM -> . EXPRESION TkAsterisco EXPRESION
    (68) BINEXPRARITM -> . EXPRESION TkDiv EXPRESION
    (69) BINEXPRARITM -> . EXPRESION TkModulo EXPRESION
    (70) UNEXPRARITME -> . TkResta EXPRESION
    (71) UNEXPRARITME -> . TkSuma EXPRESION
    (55) NUMERO -> . TkNum
    (47) FUNCIONES -> . TkBottom
    (48) FUNCIONES -> . TkRtoi
    (49) FUNCIONES -> . TkLength
    (50) FUNCIONES -> . TkTop

    TkString        shift and go to state 55
    TkParAbre       shift and go to state 26
    TkId            shift and go to state 3
    TkTrue          shift and go to state 23
    TkFalse         shift and go to state 24
    TkNot           shift and go to state 27
    TkResta         shift and go to state 43
    TkSuma          shift and go to state 32
    TkNum           shift and go to state 25
    TkBottom        shift and go to state 41
    TkRtoi          shift and go to state 37
    TkLength        shift and go to state 33
    TkTop           shift and go to state 39

    EXPRESION                      shift and go to state 53
    UNEXPRBOOL                     shift and go to state 40
    STRINEXP                       shift and go to state 54
    FUNCIONES                      shift and go to state 44
    EXPRELACIONAL                  shift and go to state 34
    EXPRBINBOOL                    shift and go to state 46
    UNEXPRARITME                   shift and go to state 29
    IMPRESION                      shift and go to state 56
    BOOL                           shift and go to state 30
    NUMERO                         shift and go to state 35
    EXPREARITME                    shift and go to state 28
    VARIABLE                       shift and go to state 36
    FUNCION                        shift and go to state 38
    BINEXPRARITM                   shift and go to state 31
    EXPRANGO                       shift and go to state 45
    EXPRBOOL                       shift and go to state 42

state 15

    (10) ASIGNACION -> VARIABLE . TkAsignacion EXPRESION

    TkAsignacion    shift and go to state 57


state 16

    (8) INSTRUCCION -> INPUT .

    TkElse          reduce using rule 8 (INSTRUCCION -> INPUT .)
    $end            reduce using rule 8 (INSTRUCCION -> INPUT .)
    TkPuntoYComa    reduce using rule 8 (INSTRUCCION -> INPUT .)
    TkEnd           reduce using rule 8 (INSTRUCCION -> INPUT .)


state 17

    (7) INSTRUCCION -> BLOQUE .

    TkElse          reduce using rule 7 (INSTRUCCION -> BLOQUE .)
    $end            reduce using rule 7 (INSTRUCCION -> BLOQUE .)
    TkPuntoYComa    reduce using rule 7 (INSTRUCCION -> BLOQUE .)
    TkEnd           reduce using rule 7 (INSTRUCCION -> BLOQUE .)


state 18

    (5) INSTRUCCION -> REPETICION_DET .

    TkElse          reduce using rule 5 (INSTRUCCION -> REPETICION_DET .)
    $end            reduce using rule 5 (INSTRUCCION -> REPETICION_DET .)
    TkPuntoYComa    reduce using rule 5 (INSTRUCCION -> REPETICION_DET .)
    TkEnd           reduce using rule 5 (INSTRUCCION -> REPETICION_DET .)


state 19

    (3) INSTRUCCION -> CONDICIONAL .

    TkElse          reduce using rule 3 (INSTRUCCION -> CONDICIONAL .)
    $end            reduce using rule 3 (INSTRUCCION -> CONDICIONAL .)
    TkPuntoYComa    reduce using rule 3 (INSTRUCCION -> CONDICIONAL .)
    TkEnd           reduce using rule 3 (INSTRUCCION -> CONDICIONAL .)


state 20
